# gnostr-hello

./: Cargo.toml  Dockerfile  GNUmakefile  Makefile  README.md  alt-index.html  cargo.mk
.github/workflows/: docker-image.yml
src/: genkey.rs  main.rs
wix/: main.wxs
