[package]
name = "gnostr-hello"
version = "0.0.1"
authors = ["gnostr <admin@gnostr.org>"]
edition = "2018"
##REF: https://github.com/supertestnet/vanilla-js-nostr.git

[[bin]]
name = "gnostr-genkey"
path = "src/genkey.rs"
doc = true

[dependencies]
hyper = { version = "0.14.4", features = ["server", "http1", "http2", "tcp", "stream"] }
include_dir = { version = "0.0.3", features = ["glob", "metadata"], git = "https://github.com/gnostr-org/include_dir.git" }
tokio = { version = "1.4.0", features = ["full"] }
