[package]
name = "gnostr-hello"
version = "0.0.5"
authors = ["gnostr <admin@gnostr.org>"]
edition = "2018"
homepage = "https://github.com/gnostr-org/gnostr-hello"
repository = "https://github.com/gnostr-org/gnostr-hello.git"
description = "gnostr-hello: extrememly simple async web service in rust"

ignore = ["alt-index.html", "index.html"]

[package.metadata.wix]
upgrade-guid = "0BF45EE7-C0F7-477A-8C61-3E26B4EB15F4"
path-guid = "9D23609F-6B25-47B5-80F9-0B7D1622E38D"
license = false
eula = false
##REF: https://github.com/supertestnet/vanilla-js-nostr.git

[[bin]]
name = "gnostr-genkey"
path = "src/genkey.rs"
doc = true

[dependencies]
hyper = { version = "0.14.4", features = ["server", "http1", "http2", "tcp", "stream"] }
include_dir = { version = "0.7.4", features = ["glob", "metadata"] }
tokio = { version = "1.4.0", features = ["full"] }

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.14.1"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell", "powershell", "homebrew", "msi"]
# A GitHub repo to push Homebrew formulas to
tap = "gnostr-org/homebrew-gnostr-org"
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["x86_64-unknown-linux-gnu", "x86_64-unknown-linux-musl", "x86_64-pc-windows-msvc"]
# Publish jobs to run in CI
publish-jobs = ["homebrew"]
# Publish jobs to run in CI
pr-run-mode = "plan"
# Whether to install an updater program
install-updater = true
